--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,8 +6,9 @@
 # ╚═╝░░╚══╝╚═════╝░╚═╝░░╚═╝╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝░░╚═╝╚═╝░░╚═╝╚═════╝░╚═════╝░
 # Created by NONPLAY - https://github.com/NONPLAYT
 
-# SpigotMC:
-# Source Code:
+# CurseForge: https://www.curseforge.com/minecraft/bukkit-plugins/ndailyrewards
+# NPLib: https://polymart.org/resource/nplib.1861
+# Source Code: https://github.com/NONPLAYT/NDailyRewards
 # Material names: https://minecraft.fandom.com/wiki/Materials#Materials
 
 data:
