--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,9 +7,9 @@
 # Created by NONPLAY - https://github.com/NONPLAYT
 
 # CurseForge: https://www.curseforge.com/minecraft/bukkit-plugins/ndailyrewards
-# NPLib: https://polymart.org/resource/nplib.1861
 # Source Code: https://github.com/NONPLAYT/NDailyRewards
 # Material names: https://minecraft.fandom.com/wiki/Materials#Materials
+# Support server: WILL COME SOON!
 
 data:
   auto-save: 15
