changes: update citizensapi and added support server
i updated rep of citizensapi to maven build on github
support server link can be founded at config file or in issue create

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,3 +3,6 @@ contact_links:
   - name: BPaste
     url: https://paste.bxteam.gq
     about: Use this link to paste your code if you are open a issue!
+  - name: Discord Support Server
+    url: https://discord.gg/9K4zWX96gx
+    about: Our support Discord, please ask questions and seek support here. RU and EN support
