--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,7 +9,7 @@
 # CurseForge: https://www.curseforge.com/minecraft/bukkit-plugins/ndailyrewards
 # Source Code: https://github.com/NONPLAYT/NDailyRewards
 # Material names: https://minecraft.fandom.com/wiki/Materials#Materials
-# Support server: WILL COME SOON!
+# Support server: https://discord.gg/9K4zWX96gx
 
 data:
   auto-save: 15
