changes: update to nbt-api 2.9.1,
set github maven build to java 8, removed codeql analysis and changes config.yml. Update maven-compiler-plugin to 3.9.0 from #2 by @renovate-bot

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -28,7 +28,7 @@ options:
     only-when-have: true
   days-row: 7
   rewards-cooldown: 86400
-  unlock-after-midnight: true
+  unlock-after-midnight: false
 rewards:
   '1':
     lore:
