--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,10 +4,10 @@
 # ██║╚████║██║░░██║██╔══██║██║██║░░░░░░░╚██╔╝░░██╔══██╗██╔══╝░░░░████╔═████║░██╔══██║██╔══██╗██║░░██║░╚═══██╗
 # ██║░╚███║██████╔╝██║░░██║██║███████╗░░░██║░░░██║░░██║███████╗░░╚██╔╝░╚██╔╝░██║░░██║██║░░██║██████╔╝██████╔╝
 # ╚═╝░░╚══╝╚═════╝░╚═╝░░╚═╝╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝░░╚═╝╚═╝░░╚═╝╚═════╝░╚═════╝░
-# Created by NONPLAY - https://github.com/NONPLAYT
+# Created by NONPLAY & BX-Team - https://github.com/BX-Team
 
 # CurseForge: https://www.curseforge.com/minecraft/bukkit-plugins/ndailyrewards
-# Source Code: https://github.com/NONPLAYT/NDailyRewards
+# Source Code: https://github.com/BX-Team/NDailyRewards
 # Material names: https://minecraft.fandom.com/wiki/Materials#Materials
 # Support server: https://discord.gg/9K4zWX96gx
 
