--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -178,3 +178,6 @@ gui:
         - '&cYou must wait: &7%time%'
         - '&cbefore claiming your next bonus'
       slots: 0,1,2,3,4,5,6,7,8,9,17,18,19,20,21,22,23,24,25,26
+
+# DO NOT CHANGE THIS
+cfgver: '1.2'
