--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: false
 contact_links:
-  - name: BPaste
-    url: https://paste.bxteam.gq
+  - name: Hastebin
+    url: https://www.toptal.com/developers/hastebin/
     about: Use this link to paste your code if you are open a issue!
   - name: Discord Support Server
     url: https://discord.gg/9K4zWX96gx
