--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,12 +4,12 @@
 # ██║╚████║██║░░██║██╔══██║██║██║░░░░░░░╚██╔╝░░██╔══██╗██╔══╝░░░░████╔═████║░██╔══██║██╔══██╗██║░░██║░╚═══██╗
 # ██║░╚███║██████╔╝██║░░██║██║███████╗░░░██║░░░██║░░██║███████╗░░╚██╔╝░╚██╔╝░██║░░██║██║░░██║██████╔╝██████╔╝
 # ╚═╝░░╚══╝╚═════╝░╚═╝░░╚═╝╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝░░╚═╝╚═╝░░╚═╝╚═════╝░╚═════╝░
-# Created by NONPLAY & BX-Team - https://github.com/BX-Team
+# Created with ♥ by NONPLAY and BX Team! Take care of yourself and loved ones!
 
 # CurseForge: https://www.curseforge.com/minecraft/bukkit-plugins/ndailyrewards
 # Source Code: https://github.com/BX-Team/NDailyRewards
 # Material names: https://minecraft.fandom.com/wiki/Materials#Materials
-# Support server: https://discord.gg/9K4zWX96gx
+# Discord server (for support): https://discord.gg/9K4zWX96gx
 
 data:
   auto-save: 15
