change discord server link

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
     url: https://www.toptal.com/developers/hastebin/
     about: Use this link to paste your code if you are open a issue!
   - name: Discord Support Server
-    url: https://discord.gg/9K4zWX96gx
+    url: https://discord.gg/p7cxhw7E2M
     about: Our support Discord, please ask questions and seek support here. RU and EN support
