--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,7 +9,7 @@
 # CurseForge: https://www.curseforge.com/minecraft/bukkit-plugins/ndailyrewards
 # Source Code: https://github.com/BX-Team/NDailyRewards
 # Material names: https://minecraft.fandom.com/wiki/Materials#Materials
-# Discord server (for support): https://discord.gg/9K4zWX96gx
+# Support server: https://discord.gg/p7cxhw7E2M
 
 data:
   auto-save: 15
