--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,7 +4,7 @@
 # ██║╚████║██║░░██║██╔══██║██║██║░░░░░░░╚██╔╝░░██╔══██╗██╔══╝░░░░████╔═████║░██╔══██║██╔══██╗██║░░██║░╚═══██╗
 # ██║░╚███║██████╔╝██║░░██║██║███████╗░░░██║░░░██║░░██║███████╗░░╚██╔╝░╚██╔╝░██║░░██║██║░░██║██████╔╝██████╔╝
 # ╚═╝░░╚══╝╚═════╝░╚═╝░░╚═╝╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝░░╚═╝╚═╝░░╚═╝╚═════╝░╚═════╝░
-# Created with ♥ by NONPLAY and BX Team! Take care of yourself and loved ones!
+# Created with ♥ by NONPLAY and BX Team!
 
 # CurseForge: https://www.curseforge.com/minecraft/bukkit-plugins/ndailyrewards
 # Source Code: https://github.com/BX-Team/NDailyRewards
@@ -178,6 +178,3 @@ gui:
         - '&cYou must wait: &7%time%'
         - '&cbefore claiming your next bonus'
       slots: 0,1,2,3,4,5,6,7,8,9,17,18,19,20,21,22,23,24,25,26
-
-# DO NOT CHANGE THIS
-cfgver: '1.2'
