--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,9 @@ contact_links:
   - name: Hastebin
     url: https://www.toptal.com/developers/hastebin/
     about: Use this link to paste your code if you are open a issue!
+  - name: Wiki Pages
+    url: https://wiki.bxteam.gq/
+    about: Our official wiki. More pages with NDR and other projects will be available soon!
   - name: Discord Support Server
     url: https://discord.gg/p7cxhw7E2M
     about: Our support Discord, please ask questions and seek support here. RU and EN support
