--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    if: "!contains(github.event.commits[0].message, '[ci-skip]')"
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
