[ci-skip] update maven deploy repo

--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,12 @@
 
     <distributionManagement>
         <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+            <id>bxteam-repo</id>
+            <url>https://maven.bxteam.gq/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <id>bxteam-repo</id>
+            <url>https://maven.bxteam.gq/releases</url>
         </repository>
     </distributionManagement>
 
