[ci-skip] start bumping 1.19.3

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@
 # ██║░╚███║██████╔╝██║░░██║██║███████╗░░░██║░░░██║░░██║███████╗░░╚██╔╝░╚██╔╝░██║░░██║██║░░██║██████╔╝██████╔╝
 # ╚═╝░░╚══╝╚═════╝░╚═╝░░╚═╝╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝░░╚═╝╚═╝░░╚═╝╚═════╝░╚═════╝░
 
-# CurseForge: https://www.curseforge.com/minecraft/bukkit-plugins/ndailyrewards
+# Modrinth: https://modrinth.com/mod/ndailyrewards
 # Source Code: https://github.com/BX-Team/NDailyRewards
 # Material names: https://minecraft.fandom.com/wiki/Materials#Materials
 # Support server: https://discord.gg/p7cxhw7E2M
