--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Java CI with Maven
 
 on:
@@ -27,6 +24,6 @@ jobs:
     - name: Upload NDailyRewards
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: NDailyRewards Artifact
-        path: "target/original-ndailyrewards*.jar"
+        name: NDailyRewards Dev Artifacts
+        path: "target/*-ndailyrewards*.jar"
 
