--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.40.0.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
