--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,15 +5,13 @@
 # ██║░╚███║██████╔╝██║░░██║██║███████╗░░░██║░░░██║░░██║███████╗░░╚██╔╝░╚██╔╝░██║░░██║██║░░██║██████╔╝██████╔╝
 # ╚═╝░░╚══╝╚═════╝░╚═╝░░╚═╝╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝╚══════╝░░░╚═╝░░░╚═╝░░╚═╝░░╚═╝╚═╝░░╚═╝╚═════╝░╚═════╝░
 
-# Modrinth: https://modrinth.com/mod/ndailyrewards
-# Source Code: https://github.com/BX-Team/NDailyRewards
 # Material names: https://minecraft.fandom.com/wiki/Materials#Materials
-# Support server: https://discord.gg/p7cxhw7E2M
+# Discord server: https://discord.gg/p7cxhw7E2M
 
 data:
   auto-save: 15
   storage:
-    type: sqlite #sqlite or MySQL
+    type: sqlite
     username: none
     password: none
     host: none
@@ -26,7 +24,7 @@ options:
     enabled: true
     only-when-have: true
   days-row: 7
-  rewards-cooldown: 86400
+  rewards-cool-down: 86400
   unlock-after-midnight: false
 rewards:
   '1':
@@ -76,11 +74,11 @@ rewards:
       - '&e&lRewards:'
       - '&6- $5000'
       - '&6- x16 Diamonds'
-      - '&6- 10 Exp Levels'
+      - '&6- 1000 Experience'
     commands:
       - 'console: eco give %player% 5000'
       - 'console: give %player% diamond 16'
-      - 'console: exp give %player% 10l'
+      - 'console: xp add %player% 1000'
     messages:
       - '&aCongratulations! You got reward for join %day%th day in a row!'
   '5':
@@ -91,11 +89,11 @@ rewards:
       - '&e&lRewards:'
       - '&6- $5000'
       - '&6- x16 Diamonds'
-      - '&6- 20 Exp Levels'
+      - '&6- 1500 Experience'
     commands:
       - 'console: eco give %player% 5000'
       - 'console: give %player% diamond 16'
-      - 'console: exp give %player% 20l'
+      - 'console: xp add %player% 1500'
     messages:
       - '&aCongratulations! You got reward for join %day%th day in a row!'
   '6':
@@ -106,11 +104,11 @@ rewards:
       - '&e&lRewards:'
       - '&6- $5000'
       - '&6- x16 Diamonds'
-      - '&6- 30 Exp Levels'
+      - '&6- 3000 Experience'
     commands:
       - 'console: eco give %player% 5000'
       - 'console: give %player% diamond 16'
-      - 'console: exp give %player% 30l'
+      - 'console: xp add %player% 3000'
     messages:
       - '&aCongratulations! You got reward for join %day%th day in a row!'
   '7':
@@ -121,11 +119,11 @@ rewards:
       - '&e&lRewards:'
       - '&6- $10000'
       - '&6- x16 Diamonds'
-      - '&6- 40 Exp Levels'
+      - '&6- 4000 Experience'
     commands:
       - 'console: eco give %player% 10000'
       - 'console: give %player% diamond 16'
-      - 'console: exp give %player% 40l'
+      - 'console: xp add %player% 4000'
     messages:
       - '&aCongratulations! You got reward for join %day%th day in a row!'
 gui:
