--- a/pom.xml
+++ b/pom.xml
@@ -160,8 +160,9 @@
         </dependency>
         <dependency>
             <groupId>de.tr7zw</groupId>
-            <artifactId>item-nbt-api</artifactId>
+            <artifactId>item-nbt-api-plugin</artifactId>
             <version>2.11.2</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.xerial</groupId>
