--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: NDailyRewards
 version: '${project.version}'
 main: gq.bxteam.ndailyrewards.NDailyRewards
 api-version: 1.13
+depend: [ NBTAPI ]
 softdepend: [ Citizens, PlaceholderAPI ]
 authors: [ NONPLAY, Xenolit ]
 description: Reward players for playing on your server!
