--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -26,7 +26,7 @@ body:
       description: Which server version version you using? If your server version is not listed, it is not supported. Update to a supported version first.
       multiple: false
       options:
-        - '1.19'
+        - '1.19.4'
         - '1.18.2'
         - '1.17.1'
         - '1.16.5'
@@ -84,7 +84,7 @@ body:
       options:
         - label: I have included a NDailyRewards error log.
           required: true
-        - label: I am using the newest build from https://www.curseforge.com/minecraft/bukkit-plugins/ndailyrewards and the issue still persists.
+        - label: I am using the newest build from https://modrinth.com/plugin/ndailyrewards and the issue still persists.
           required: true
 
   - type: textarea
