--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,6 +7,7 @@
 
 # Material names: https://minecraft.fandom.com/wiki/Materials#Materials
 # Discord server: https://discord.gg/p7cxhw7E2M
+# Modrinth: https://modrinth.com/plugin/ndailyrewards
 
 data:
   auto-save: 15
