--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,6 +4,10 @@ on:
   push:
   pull_request:
     branches: [ master ]
+    
+permissions:
+  contents: read
+  checks: write
 
 jobs:
   build:
@@ -17,8 +21,33 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Get version from pom.xml
+      uses: entimaniac/read-pom-version-action@1.0.0
+      id: fetch-version
+    - name: Get Version
+      run: |
+        echo "version_name=${{steps.fetch-version.outputs.version}}" >> $GITHUB_ENV
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Upload to Modrinth (Alpha)
+      uses: Kir-Antipov/mc-publish@v3.3
+      with:
+        modrinth-id: ZiFzQAnz
+        modrinth-featured: false
+        modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+        files: target/*ndailyrewards*.jar
+        version-type: alpha
+        name: NDailyRewards v${{ env.version_name }}
+        version: ${{ env.version_name }}
+        changelog: ${{ github.event.head_commit.message }}
+        loaders: |
+          bukkit
+          spigot
+          paper
+          purpur
+        game-versions: |
+          <1.13
+        fail-mode: fail
     - name: Upload NDailyRewards
       uses: actions/upload-artifact@v3.1.2
       with:
