--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,10 +35,13 @@ jobs:
         modrinth-id: ZiFzQAnz
         modrinth-featured: false
         modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
-        files: target/*ndailyrewards*.jar
+        modrinth-dependencies: |
+          nfGCP9fk@2.11.3(required)
+        files: "target/ndailyrewards-${{steps.fetch-version.outputs.version}}.jar"
         version-type: alpha
         name: NDailyRewards v${{ env.version_name }}
         version: ${{ env.version_name }}
+        game-version-filter: releases
         changelog: ${{ github.event.head_commit.message }}
         loaders: |
           bukkit
@@ -46,7 +49,14 @@ jobs:
           paper
           purpur
         game-versions: |
-          <1.13
+          [1.13,1.13.2)
+          [1.14,1.14.4)
+          [1.15,1.15.2)
+          [1.16,1.16.5)
+          [1.17,1.17.1)
+          [1.18,1.18.2)
+          [1.19,1.19.4)
+          1.20
         fail-mode: fail
     - name: Upload NDailyRewards
       uses: actions/upload-artifact@v3.1.2
