--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: NDailyRewards
-version: '${project.version}'
+version: '${version}'
 main: gq.bxteam.ndailyrewards.NDailyRewards
-api-version: 1.13
+api-version: 1.16
 depend: [ NBTAPI ]
 softdepend: [ Citizens, PlaceholderAPI ]
 authors: [ NONPLAY, Xenolit ]
