--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Hastebin
-    url: https://www.toptal.com/developers/hastebin/
+  - name: Pastes
+    url: https://pastes.dev
     about: Use this link to paste your code if you are open a issue!
   - name: Discord Support Server
     url: https://discord.gg/p7cxhw7E2M
