--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,18 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: gradle
+    - name: Query Version
+      run: |
+        echo "::set-output name=VERSION_NAME::$(${{github.workspace}}/gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{printf $2}')"
+      id: fetch-version
+    - name: Get Version
+      run: |
+        echo "version_name=${{steps.fetch-version.outputs.VERSION_NAME}}" >> $GITHUB_ENV
+        chmod +x gradlew
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: build
     - name: Upload to Modrinth (Alpha)
       uses: Kir-Antipov/mc-publish@v3.3
       with:
@@ -29,7 +41,7 @@ jobs:
         modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
         modrinth-dependencies: |
           nfGCP9fk@2.11.3(required)
-        files: "target/ndailyrewards-${{steps.fetch-version.outputs.version}}.jar"
+        files: "build/libs/NDailyRewards-*.jar,!build/libs/*sources.jar,!build/libs/*javadoc.jar"
         version-type: alpha
         name: NDailyRewards v${{ env.version_name }}
         version: ${{ env.version_name }}
@@ -43,6 +55,7 @@ jobs:
         game-versions: |
           [1.16,1.20)
         fail-mode: fail
+        java: 16
     - name: Upload NDailyRewards
       uses: actions/upload-artifact@v3.1.2
       with:
