--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
         modrinth-dependencies: |
           nfGCP9fk@2.11.3(required)
-        files: "build/libs/NDailyRewards-*.jar,!build/libs/*sources.jar,!build/libs/*javadoc.jar"
+        files: "build/libs/NDailyRewards-${{steps.fetch-version.outputs.VERSION_NAME}}.jar"
         version-type: alpha
         name: NDailyRewards v${{ env.version_name }}
         version: ${{ env.version_name }}
@@ -56,7 +56,7 @@ jobs:
         game-versions: |
           [1.16,1.20)
         fail-mode: fail
-        java: 16
+        java: 17
     - name: Upload NDailyRewards
       uses: actions/upload-artifact@v3.1.2
       with:
