--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,11 @@ jobs:
     - name: Query Version
       run: |
         echo "::set-output name=VERSION_NAME::$(${{github.workspace}}/gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{printf $2}')"
+        echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
       id: fetch-version
     - name: Get Version
       run: |
-        echo "version_name=${{steps.fetch-version.outputs.VERSION_NAME}}" >> $GITHUB_ENV
+        echo "version_name=${{steps.fetch-version.outputs.VERSION_NAME}}-${{SHORT_SHA}}" >> $GITHUB_ENV
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2
       with:
