--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group = gq.bxteam
 
 mcVersion = 1.20-R0.1-SNAPSHOT
-version = 1.7.1
+version = 1.7.1-SNAPSHOT
 
 org.gradle.parallel = true
 org.gradle.vfs.watch = false
