--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
           version-type: release
           name: NDailyRewards ${{ github.event.release.tag_name }}
           version: ${{ github.event.release.tag_name }}
-          game-version-filter: releases
+          game-version-filter: releases | min-major | min-minor
           changelog: ${{ github.event.release.body }}
           loaders: |
             bukkit
@@ -54,6 +54,6 @@ jobs:
             paper
             purpur
           game-versions: |
-            [1.16,1.20]
+            [1.16,1.20.1]
           fail-mode: fail
           java: 17
