--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,9 +27,12 @@ options:
     enabled: true
     only-when-have: true
   days-row: 7
+  # Time in seconds
   rewards-cool-down: 86400
   gui-refresh-delay: 5
   unlock-after-midnight: false
+  # Time in seconds
+  reward-login-delay: 0
   enable-metrics: true
 rewards:
   '1':
@@ -158,6 +161,13 @@ gui:
         - '%reward-lore%'
         - ''
         - '&c» &7Claim the previous reward to unlock!'
+    warmup:
+      material: 'IRON_BLOCK:0:1'
+      name: '&c[Day #%day%] &7Time-Locked Reward'
+      lore:
+        - '%reward-lore%'
+        - ''
+        - '&c» &7Wait until &e%reward-warmup-remaining% &7 to unlock!'
     next:
       material: 'GOLD_BLOCK:0:1'
       name: '&e[Day #%day%] &7Awaiting...'
@@ -177,6 +187,6 @@ gui:
         - '&aThe more days in a row you'
         - '&ajoin the better the reward!'
         - ''
-        - '&cYou must wait: &7%time%'
+        - '&cYou must wait: &7%time-warmupfactored%'
         - '&cbefore claiming your next bonus'
       slots: 0,1,2,3,4,5,6,7,8,9,17,18,19,20,21,22,23,24,25,26
