--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,11 +27,9 @@ options:
     enabled: true
     only-when-have: true
   days-row: 7
-  # Time in seconds
   rewards-cool-down: 86400
   gui-refresh-delay: 5
   unlock-after-midnight: false
-  # Time in seconds
   reward-login-delay: 0
   enable-metrics: true
 rewards:
@@ -167,7 +165,7 @@ gui:
       lore:
         - '%reward-lore%'
         - ''
-        - '&c» &7Wait until &e%reward-warmup-remaining% &7 to unlock!'
+        - '&c» &7Wait until &e%reward-warmup-remaining% &7to unlock!'
     next:
       material: 'GOLD_BLOCK:0:1'
       name: '&e[Day #%day%] &7Awaiting...'
@@ -187,6 +185,6 @@ gui:
         - '&aThe more days in a row you'
         - '&ajoin the better the reward!'
         - ''
-        - '&cYou must wait: &7%time-warmupfactored%'
+        - '&cYou must wait: &7%time-warmup-factored%'
         - '&cbefore claiming your next bonus'
       slots: 0,1,2,3,4,5,6,7,8,9,17,18,19,20,21,22,23,24,25,26
