--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,15 @@
-group = gq.bxteam
+# Gradle daemon options
+org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
-mcVersion = 1.20.1-R0.1-SNAPSHOT
-version = 2.2
+# Plugin properties
+group=gq.bxteam
+version=2.3
 
-org.gradle.parallel = true
-org.gradle.vfs.watch = false
-org.gradle.jvmargs = -Xmx2G
+# Dependencies
+paper_api=1.20.1-R0.1-SNAPSHOT
+citizensapi=2.0.32-SNAPSHOT
+authlib=3.16.29
+nbt_api_plugin=2.11.3
+sqlite_jdbc=3.42.0.1
+placeholder_api=2.11.3
