--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Plugin properties
-group=gq.bxteam
-version=2.3.4
+group=space.bxteam
+version=2.3.5
 
 # Dependencies
 paper_api=1.20.1-R0.1-SNAPSHOT
