--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
     if: "!contains(github.event.commits[0].message, '[ci-skip]')"
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 17
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'temurin'
         cache: gradle
 
@@ -29,14 +29,14 @@ jobs:
       with:
         arguments: build
 
-    - name: Publish API
-      continue-on-error: true
-      uses: gradle/gradle-build-action@v3.4.2
-      with:
-        arguments: publish -PndailyrewardsUsername=${{ secrets.REPO_USERNAME }} -PndailyrewardsPassword=${{ secrets.REPO_SECRET }}
+    #- name: Publish API
+    #  continue-on-error: true
+    #  uses: gradle/gradle-build-action@v3.4.2
+    #  with:
+    #    arguments: publish -PndailyrewardsUsername=${{ secrets.REPO_USERNAME }} -PndailyrewardsPassword=${{ secrets.REPO_SECRET }}
 
-    - name: Upload NDailyRewards
-      uses: actions/upload-artifact@v4.3.3
-      with:
-        name: NDailyRewards Dev Artifacts
-        path: "build/libs/NDailyRewards-*.jar"
+    #- name: Upload NDailyRewards
+    #  uses: actions/upload-artifact@v4.3.3
+    #  with:
+    #    name: NDailyRewards Dev Artifacts
+    #    path: "build/libs/NDailyRewards-*.jar"
