--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,7 @@ org.gradle.parallel=true
 
 # Plugin properties
 group=space.bxteam
-version=2.3.6
+version=3.0-SNAPSHOT
 
 # Dependencies
-paper_api=1.20.1-R0.1-SNAPSHOT
-citizensapi=2.0.32-SNAPSHOT
-authlib=3.16.29
-nbt_api_plugin=2.13.0
-sqlite_jdbc=3.46.0.0
-placeholder_api=2.11.6
+paper_api=1.21-R0.1-SNAPSHOT
