--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ org.gradle.parallel=true
 # Plugin properties
 group=space.bxteam
 version=3.0-SNAPSHOT
+description="Reward players for playing on your server"
 
 # Dependencies
 paper_api=1.21-R0.1-SNAPSHOT
+hikari_cp=5.1.0
