--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,6 +1,7 @@
 name: NDailyRewards
 version: '${version}'
 main: space.bxteam.ndailyrewards.NDailyRewards
-api-version: '1.21'
+loader: space.bxteam.ndailyrewards.NDailyRewardsLoader
+api-version: '1.19'
 authors: [NONPLAYT]
 description: Reward players for playing on your server
