--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ description="Reward players for playing on your server"
 # Dependencies
 paper_api=1.21-R0.1-SNAPSHOT
 hikari_cp=5.1.0
+placeholder_api=2.11.6
