--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,7 +9,6 @@
 # Modrinth: https://modrinth.com/plugin/ndailyrewards
 
 # General settings
-language: en
 check-updates: true
 
 # Database configuration
@@ -33,51 +32,133 @@ database:
 rewards:
   # When a player reaches the day limit, should it reset to the first day?
   reset-when-all-claimed: true
+  # Specify how many days the player has to wait to claim the reward again (in hours)
+  cooldown: 24
+  # Should next day unlock after midnight?
+  unlock-after-midnight: false
+  # Available actions:
+  # [console] - entered statement will be executed from console
+  # [player] - statement performed as player command execution
+  # [message] - messages the player with specified text
+  # [actionbar] - shows the text in actionbar for the player
+  # [title] - sends primary title with entered text
+  # [subtitle] - sends secondary title with entered text
+  # [sound] - plays specified sound for the player
+  # You can also use PlaceholderAPI placeholders (requires PlaceholderAPI plugin)
+  # Note: First slot in inventory is 0, not 1
+  days:
+    '1':
+      position: 10
+      lore:
+        - "&7&lRewards:"
+        - "&6- &e1x &6Diamond"
+      rewards:
+        - "[console] give <player> diamond 1"
+        - "[message] &6You have claimed your reward!"
+        - "[sound] ENTITY_EXPERIENCE_ORB_PICKUP:1:1"
+    '2':
+      position: 11
+      lore:
+        - "&7&lRewards:"
+        - "&6- &e2x &6Diamond"
+      rewards:
+        - "[console] give <player> diamond 2"
+        - "[message] &6You have claimed your reward!"
+        - "[sound] ENTITY_EXPERIENCE_ORB_PICKUP:1:1"
+    '3':
+      position: 12
+      lore:
+        - "&7&lRewards:"
+        - "&6- &e3x &6Diamond"
+      rewards:
+        - "[console] give <player> diamond 3"
+        - "[message] &6You have claimed your reward!"
+        - "[sound] ENTITY_EXPERIENCE_ORB_PICKUP:1:1"
+    '4':
+      position: 13
+      lore:
+        - "&7&lRewards:"
+        - "&6- &e4x &6Diamond"
+      rewards:
+        - "[console] give <player> diamond 4"
+        - "[message] &6You have claimed your reward!"
+        - "[sound] ENTITY_EXPERIENCE_ORB_PICKUP:1:1"
+    '5':
+      position: 14
+      lore:
+        - "&7&lRewards:"
+        - "&6- &e5x &6Diamond"
+      rewards:
+        - "[console] give <player> diamond 5"
+        - "[message] &6You have claimed your reward!"
+        - "[sound] ENTITY_EXPERIENCE_ORB_PICKUP:1:1"
+    '6':
+      position: 15
+      lore:
+        - "&7&lRewards:"
+        - "&6- &e6x &6Diamond"
+      rewards:
+        - "[console] give <player> diamond 6"
+        - "[message] &6You have claimed your reward!"
+        - "[sound] ENTITY_EXPERIENCE_ORB_PICKUP:1:1"
+    '7':
+      position: 16
+      lore:
+        - "&7&lRewards:"
+        - "&6- &e7x &6Diamond"
+      rewards:
+        - "[console] give <player> diamond 7"
+        - "[message] &6You have claimed your reward!"
+        - "[sound] ENTITY_EXPERIENCE_ORB_PICKUP:1:1"
 
 gui:
-  title: "&6Daily Rewards"
-  rows: 6
-  display:
-    available:
-      material: "BARRIER"
-      name: "&aDay <dayNum>"
-      lore:
-        - "&7Your Reward Awaits"
-        - "&7Click Me to claim your prize!"
-        - ""
-        - "<reward-lore>"
-    claimed:
-      material: "EMERALD_BLOCK"
-      name: "&aDay <dayNum>"
-      lore:
-        - "&7You have claimed this reward"
-        - ""
-        - "<reward-lore>"
-    unavailable:
-      material: "COAL_BLOCK"
-      name: "&aDay <dayNum>"
-      lore:
-        - "&7You have not reached this day yet"
-        - ""
-        - "<reward-lore>"
+  reward:
+    title: "&6Daily Rewards"
+    size: 27
+    display:
+      available:
+        material: "EMERALD_BLOCK"
+        name: "&aDay <dayNum>"
+        custom-model-data: 0
+        lore:
+          - "&7Your Reward Awaits"
+          - "&7Click Me to claim your prize!"
+          - ""
+          - "<reward-lore>"
+      claimed:
+        material: "COAL_BLOCK"
+        name: "&aDay <dayNum>"
+        custom-model-data: 0
+        lore:
+          - "&7You have claimed this reward"
+          - ""
+          - "<reward-lore>"
+      next:
+        material: "COAL_BLOCK"
+        name: "&aDay <dayNum>"
+        custom-model-data: 0
+        lore:
+          - "&7Your Reward Will Be Here Soon"
+          - "&7Wait <time-left>"
+          - ""
+          - "<reward-lore>"
+      unavailable:
+        material: "BARRIER"
+        name: "&aDay <dayNum>"
+        custom-model-data: 0
+        lore:
+          - "&7You have not reached this day yet"
+          - ""
+          - "<reward-lore>"
 
-  other:
-    filler:
-      material: "GRAY_STAINED_GLASS_PANE"
-      position: []
-      name: "&7"
-      lore: []
-    settings:
-      material: "LEVER"
-      position: []
-      name: "&cSettings"
-      lore:
-        - "&7Click to open the settings menu"
+    other:
+      filler:
+        enable: true
+        material: "GRAY_STAINED_GLASS_PANE"
+        name: "&7"
+        lore: []
 
 sound:
-  claim:
-    enabled: true
-    type: "ENTITY_EXPERIENCE_ORB_PICKUP:1:1"
   open:
     enabled: true
     type: "BLOCK_BARREL_OPEN:1:1"
